added touch controls for mobile usage

--- a/index.html
+++ b/index.html
@@ -2,11 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <title>Retro Shooter</title>
     <style>
-        body { margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; background: #000; }
-        canvas { max-width: 100%; max-height: 100%; }
+        body { 
+            margin: 0; 
+            padding: 0;
+            display: flex; 
+            justify-content: center; 
+            align-items: center; 
+            height: 100vh; 
+            background: #000;
+            overflow: hidden;
+            touch-action: none;
+        }
+        canvas { 
+            max-width: 100%; 
+            max-height: 100%;
+            touch-action: none;
+        }
     </style>
 </head>
 <body>
